--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
-        <infinispan.version>9.4.11.Final</infinispan.version>
+        <infinispan.version>9.4.5.Final-redhat-0001</infinispan.version>
         <assertj.version>3.12.1</assertj.version>
         <junit.jupiter.version>5.3.1</junit.jupiter.version>
         <testcontainers.version>1.11.1</testcontainers.version>
@@ -126,13 +126,13 @@
             </dependency>
             <dependency>
                 <groupId>org.testcontainers</groupId>
-                <artifactId>testcontainers</artifactId>
+                <artifactId>junit-jupiter</artifactId>
                 <version>${testcontainers.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.testcontainers</groupId>
-                <artifactId>junit-jupiter</artifactId>
-                <version>${testcontainers.version}</version>
+                <groupId>org.infinispan</groupId>
+                <artifactId>infinispan-junit5</artifactId>
+                <version>0.2-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
